--- a/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
@@ -147,7 +147,7 @@
                                             var imgSrc = String.Format("data:image/webp;base64,{0}", base64);
                                             <div class="zoom-gallery">
                                                 <a href="@imgSrc" data-source="" title="Side" style="width:640px;height:480px;">
-                                                    <img style="width:20vw;" src="@imgSrc" />
+                                                    <img width="30" src="@imgSrc" />
                                                 </a>
                                             </div>
                                         }
@@ -159,7 +159,7 @@
                                             var imgSrc = String.Format("data:image/webp;base64,{0}", base64);
                                             <div class="zoom-gallery">
                                                 <a href="@imgSrc" data-source="" title="Back" style="width:640px;height:480px;">
-                                                    <img style="width:20vw;" src="@imgSrc" />
+                                                    <img width="30" src="@imgSrc" />
                                                 </a>
                                             </div>
                                         }
